# call-for-me-agent

./: .env.example  .gitignore  README.md  pyproject.toml
deploy/: runpod-setup.sh  start.sh
docker/: Dockerfile  docker-compose.yml
src/: __main__.py  asr_server.py  config.py  tts_server.py
src/api/: server.py
src/pipeline/: bot.py  processors.py
src/shadow_model/: service.py
src/translation/: translator.py
